# bible_semantics

./: .gitattributes  .gitignore  Experiments.ipynb  README.md  pyproject.toml
data/: AKJV_flattened.jsonl  AKJV_flattened_with_embeddings.jsonl  ASV_flattened.jsonl  ASV_flattened_with_embeddings.jsonl  BRG_flattened.jsonl  BRG_flattened_with_embeddings.jsonl  EHV_flattened.jsonl  EHV_flattened_with_embeddings.jsonl  ESVUK_flattened.jsonl  ESVUK_flattened_with_embeddings.jsonl  ESV_flattened.jsonl  ESV_flattened_with_embeddings.jsonl  GNV_flattened.jsonl  GNV_flattened_with_embeddings.jsonl  GW_flattened.jsonl  GW_flattened_with_embeddings.jsonl  ISV_flattened.jsonl  ISV_flattened_with_embeddings.jsonl  JUB_flattened.jsonl  JUB_flattened_with_embeddings.jsonl  KJ21_flattened.jsonl  KJ21_flattened_with_embeddings.jsonl  KJV_flattened.jsonl  KJV_flattened_with_embeddings.jsonl  LEB_flattened.jsonl  LEB_flattened_with_embeddings.jsonl  MEV_flattened.jsonl  MEV_flattened_with_embeddings.jsonl  NASB1995_flattened.jsonl  NASB1995_flattened_with_embeddings.jsonl  NASB_flattened.jsonl  NASB_flattened_with_embeddings.jsonl  NET_flattened.jsonl  NET_flattened_with_embeddings.jsonl  NIVUK_flattened.jsonl  NIVUK_flattened_with_embeddings.jsonl  NIV_flattened.jsonl  NIV_flattened_with_embeddings.jsonl  NKJV_flattened.jsonl  NKJV_flattened_with_embeddings.jsonl  (+14 more)
src/bible_semantics/: main.py
