[tool.poetry]
name = "bible-semantics"
version = "0.1.0"
description = "A framework for semantic research on the Christian bible."
authors = ["Markus Kreitzer <markus@kreitzer.dev>"]
license = "Copyright 2025 Markus Kreitzer"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
ollama = "^0.4.7"
aiohttp = "^3.11.13"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
