[tool.poetry]
name = "Bible Semantics"
version = "0.1.1"
description = "A framework for semantic research on the Christian bible."
authors = ["Markus Kreitzer <markus@kreitzer.dev>"]
license = "Copyright 2025 Markus Kreitzer"
readme = "README.md"

packages = [
    { include = "bible_semantics", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
ollama = "^0.4.7"
aiohttp = "^3.11.13"
tqdm = "^4.67.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[tool.poetry.scripts]
embed = "bible_semantics.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
